--- a/assets/scss/layout/_nav.scss
+++ b/assets/scss/layout/_nav.scss
@@ -1,75 +1,50 @@
 .navbar {
-    font-weight: $font-regular;
-    border: 0;
-    margin: 0;
-    .navbar-header {
-        .navbar-toggle {
-            width: 100%;
-            margin: 0 auto;
-            .icon-bar {
-                margin: 0 auto;
-                max-height: 4px;
-                margin-bottom: 4px;
-            }
-        }
-    }
-    .nav-menu-primary-container {
-        display: table;
-        margin: 0 auto;
-        .navbar-nav {
-            @include MQ(MXL) {}
-            text-align: center;
-            li {
-                cursor: pointer;
-            }
-            a {
-                font-size: 14px;
-                &:hover {
-                    color: $rosa-cam;
-                }
-            }
-        }
-    }
-}
-
-.logo-principal {
-    h1 {
-        @include MQ(MXL) {
-            margin-top: 0;
-        }
-    }
-}
-
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.active>a:focus,
-.navbar-default .navbar-nav>.active>a:hover {
+  font-size: 1.3rem;
+  font-weight: $font-bold;
+  border: 0;
+  margin: 0;
+  &-default{
     background: none;
-    box-shadow: none;
-}
-
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.open>a,
-.navbar-default .navbar-nav>.active>a,
-.navbar-default .navbar-nav>.active>a:focus,
-.navbar-default .navbar-nav>.active>a:hover {
-    background: none;
-}
-
-.navbar-default .navbar-nav>.active>a {
-    color: none;
-}
-
-.navbar-default {
-    background: none;
-}
-
-.contacto-visible{
-    display: none;
-}
-.nav-principal-cam{
-    .contacto-visible{
-        display: block;
+  }
+  &-toggle {
+    width: 100%;
+    margin: 0 auto;
+    .icon-bar {
+      margin: 0 auto;
+      max-height: 4px;
+      margin-bottom: 4px;
     }
+  }
+}
+.dropdown-menu {
+  background: none;
+  font-size: 1.3rem;
+  transition: 1s ease-in-out all;
+  & li > a {
+    color: $gris-claro;
+    transition: .2s ease-in-out all;
+    &:hover {
+      color: $azul-cam;
+      background: none;
+    }
+    &:focus {
+      text-decoration: none;
+    }
+  }
+}
+.nav.navbar-nav{
+  width: 100%;
+  li{
+    min-width: 14.1%;
+  }
+}
+.contacto-visible {
+  display: none;
+}
+.nav-principal-cam {
+  .contacto-visible {
+    display: block;
+  }
 }
 
 /*
@@ -77,8 +52,6 @@ HOVERNAV
 ========
 A simple addition to the dropdown menu (Bootstrap itself is unchanged). Navbar dropdowns appear on hover.
 This works only for screen sizes larger than phones.
-
-If you don't want this, delete this segment of the CSS and delete the corresponding segment of js/bst-plus.js
 */
 @media (min-width: 768px) {
   .navbar-nav .open ul {
@@ -87,64 +60,59 @@ If you don't want this, delete this segment of the CSS and delete the correspond
   .navbar-default .navbar-nav > .open > a,
   .navbar-default .navbar-nav > .open > a:hover,
   .navbar-default .navbar-nav > .open > a:focus {
-    color: #555;
-    background: none
+    background: none;
   }
   .navbar-inverse .navbar-nav > .open > a,
   .navbar-inverse .navbar-nav > .open > a:hover,
   .navbar-inverse .navbar-nav > .open > a:focus {
-    color: #969696;
-    background: none
+    background: none;
   }
   .navbar-nav .hovernav:hover > .dropdown-menu {
-    display: block
+    display: block;
+    width: 100%;
+    padding-left: 15%;
+    min-height: 20vh;
+    background: rgba($white, .9);
   }
 }
-
 /*
 MEGANAV
 =======
 A simple addition to the dropdown menu (Bootstrap itself is unchanged). When you add GRAND-CHILD links in the navbar: on screens larger than phones, Meganav will transform the dropdown into a mega-menu, with child-links displayed as menu-column heads (in bold).
-
-If you don't want this, delete this segment of the CSS and delete the corresponding segment of js/bst-plus.js
 */
-.mega-menu ul a {
-	color: #666;
+
+@include MQ(S) {
+  .has-children ul {
+    display: block !important;
+    margin-left: 15px;
+  }
 }
-.mega-menu > ul > li > a {
-	font-weight: bold !important
-}
-@media (max-width: 767px) {
-	.has-children ul {
-		display: block !important;
-		margin-left: 15px
-	}
-}
-@media (min-width: 768px) {
-	.dropdown.mega-menu {
-		position: static;
-	}
-	.mega-menu > .dropdown-menu {
-		left: 0;
-		right: 0;
-		overflow-x: auto
-	}
-	.mega-menu > ul > li {
-	  display:table-cell;
-	}
-	.mega-menu > ul ul {
-		position: relative;
-		display: block !important;
-		border: 0;
-		border-radius: 0;
-		box-shadow: none;
-		padding: 0
-	}
-	.dropdown-menu li {
-		border-right: 1px solid #e7e7e7
-	}
-    .dropdown-menu li li,
-    .dropdown-menu li:last-of-type {
-        border-right: 0
-    }
+
+@include MQ(MXL) {
+  .dropdown.mega-menu {
+    position: static;
+  }
+  .mega-menu > .dropdown-menu {
+    left: 0;
+    right: 0;
+  }
+  .mega-menu > ul > li {
+    display: table-cell;
+    min-width: 22%;
+  }
+  .mega-menu > ul ul {
+    position: relative;
+    display: block !important;
+    border: 0;
+    border-radius: 0;
+    box-shadow: none;
+    padding: 0
+  }
+  .dropdown-menu li {
+    //border-right: 1px solid #e7e7e7
+  }
+  .dropdown-menu li li,
+  .dropdown-menu li:last-of-type {
+    border-right: 0
+  }
 }
