Nav, select y labels

--- a/assets/scss/base/_global.scss
+++ b/assets/scss/base/_global.scss
@@ -46,7 +46,7 @@ hr {
   padding: 0;
 }
 
-a, .cam-links{
+a {
   color: $gris-claro;
   transition: .2s ease-in-out all;
   font-weight: $font-regular !important;
