--- a/assets/scss/layout/woocommerce/_woo-global.scss
+++ b/assets/scss/layout/woocommerce/_woo-global.scss
@@ -11,13 +11,17 @@
 //Estilos Generales paginas de Archivo
 //contenedor de woocommerce
 .woocommerce-content-cam {
-    padding: 0 80px 0 80px;
-    @include MQ(SM) {
-      padding: 0 10px 0 10px;
-    }
-    @include MQ(L) {
-      padding: 0 20px 0 20px;
-    }
+  padding: 0 80px 0 80px;
+  @include MQ(SM) {
+    padding: 0 10px 0 10px;
+  }
+  @include MQ(L) {
+    padding: 0 20px 0 20px;
+  }
+}
+
+.woocommerce-content-cam,
+.woocommerce {
   .woocommerce-message,
   .woocommerce-error,
   .woocommerce-info {
@@ -48,13 +52,14 @@
     @include MQ(SM) {
       text-align: center;
     }
-  }
-  //conteo de productos, mostrando X de X resultados x
+  } //conteo de productos, mostrando X de X resultados x
   .woocommerce-result-count {
     color: #a7a7a7;
     font-size: 0.92em;
-  }
-  //Etiqueta de descuento
+    display: block;
+    width: 100%;
+    padding: 25px 0 25px 0;
+  } //Etiqueta de descuento
   .wapl-flash {
     top: -35px;
     @include MQ(XL) {
@@ -62,26 +67,24 @@
     }
     .woocommerce-advanced-product-label.product-label {
       border-color: $gris-superclaro;
-      width: 55px;
-      height: 55px;
+      width: 45px;
+      height: 45px;
+      line-height: 40px;
+      font-weight: $font-regular;
+      font-size: 12px;
     }
-  }
-  //Titulo de la pagina, categoria de woo h1
+  } //Titulo de la pagina, categoria de woo h1
   .page-title, //orden de los productos form
   .woocommerce-ordering {
     display: none;
-  }
-  //contenedor de productos pagina de archivo
+  } //contenedor de productos pagina de archivo
   ul.products {
-    padding: 40px 0 0 0;
-    //Producto especifico
+    padding: 40px 0 0 0; //Producto especifico
     li.product {
       margin-bottom: 20px;
       width: 13%;
       display: inline-block;
       vertical-align: top;
-      *display: inline;
-      *zoom: 1;
       @include MQ(SM) {
         width: 45%;
       }
@@ -102,14 +105,12 @@
             opacity: 1;
             color: $gris-claro;
           }
-        }
-        //Span aviso de oferta
+        } //Span aviso de oferta
         span.onsale {}
         //Span de precios
         span.price {
           display: none;
-          text-align: center;
-          //Precio de descuento
+          text-align: center; //Precio de descuento
           del {}
           //Precio a pagar
           ins {}
@@ -119,8 +120,7 @@
               margin-right: 8px;
             }
           }
-        }
-        //Nombre del producto
+        } //Nombre del producto
         h3,
         h2 {
           position: relative;
@@ -146,8 +146,7 @@
             top: -25px;
           }
           font-size: 1.06em;
-        }
-        //imagen del producto
+        } //imagen del producto
         img.attachment-shop_catalog {
           padding: 20px;
           @include MQ(L) {
@@ -159,8 +158,7 @@
         }
       }
     }
-  }
-  //Paginacion
+  } //Paginacion
   nav.woocommerce-pagination {
     margin: 40px 0 30px 0;
     ul.page-numbers {
@@ -179,8 +177,9 @@
 //Todos los botones de woo
 .woocommerce button.button,
 a.button {
-  font-weight: 400 !important;
+  font-weight: $font-regular !important;
 }
-.woocommerce-Price-currencySymbol{
+
+.woocommerce-Price-currencySymbol {
   margin-right: 6px;
 }
